--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link
-      href="./output.css"
+      href="./src/output.css"
       rel="stylesheet"
     />
     <title>Lupix</title>
