changed file path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <link
       rel="stylesheet"
-      href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+      href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link
       href="./src/output.css"
@@ -22,7 +22,7 @@
     <div>
       <nav class="m-5 flex justify-between items-center">
         <img
-          src="../static/images/logo/logo.png"
+          src="./static/images/logo/logo.png"
           alt="Lupix"
           class="w-20 h-20 sm:w-20 sm:h-20 md:w-32 md:h-32"
         />
@@ -148,7 +148,7 @@
             class="flex justify-center items-center text-white gap-2 w-full md:w-auto"
           >
             <img
-              src="../static/images/brands/layers.png"
+              src="./static/images/brands/layers.png"
               class="w-5 sm:w-8 md:w-10"
             />
             <p class="text-sm sm:text-base md:text-lg">Layers</p>
@@ -157,7 +157,7 @@
             class="flex justify-center items-center text-white gap-2 w-full md:w-auto"
           >
             <img
-              src="../static/images/brands/quotient.png"
+              src="./static/images/brands/quotient.png"
               class="w-5 sm:w-8 md:w-10"
             />
             <p class="text-sm sm:text-base md:text-lg">Quotient</p>
@@ -166,7 +166,7 @@
             class="flex justify-center items-center text-white gap-2 w-full md:w-auto"
           >
             <img
-              src="../static/images/brands/circooles.png"
+              src="./static/images/brands/circooles.png"
               class="w-5 sm:w-8 md:w-10"
             />
             <p class="text-sm sm:text-base md:text-lg">Circooles</p>
@@ -175,7 +175,7 @@
             class="flex justify-center items-center text-white gap-2 w-full md:w-auto"
           >
             <img
-              src="../static/images/brands/hourglass.png"
+              src="./static/images/brands/hourglass.png"
               class="w-5 sm:w-8 md:w-10"
             />
             <p class="text-sm sm:text-base md:text-lg">Hourglass</p>
@@ -184,7 +184,7 @@
             class="flex justify-center items-center text-white gap-2 w-full md:w-auto"
           >
             <img
-              src="../static/images/brands/commandR.png"
+              src="./static/images/brands/commandR.png"
               class="w-5 sm:w-8 md:w-10"
             />
             <p class="text-sm sm:text-base md:text-lg">Command+R</p>
@@ -224,7 +224,7 @@
         >
           <li>
             <img
-              src="../static/images/features/discover.png"
+              src="./static/images/features/discover.png"
               class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
             />
             <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
@@ -237,7 +237,7 @@
           </li>
           <li>
             <img
-              src="../static/images/features/strategize.png"
+              src="./static/images/features/strategize.png"
               class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
             />
             <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
@@ -250,7 +250,7 @@
           </li>
           <li>
             <img
-              src="../static/images/features/create.png"
+              src="./static/images/features/create.png"
               class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
             />
             <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">Create</h5>
@@ -261,7 +261,7 @@
           </li>
           <li>
             <img
-              src="../static/images/features/launch.png"
+              src="./static/images/features/launch.png"
               class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
             />
             <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">Lauch</h5>
@@ -272,7 +272,7 @@
           </li>
           <li>
             <img
-              src="../static/images/features/optimize.png"
+              src="./static/images/features/optimize.png"
               class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
             />
             <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
@@ -533,7 +533,7 @@
                 class="flex flex-col sm:flex-row items-center sm:space-x-6 bg-white p-4 sm:p-6 rounded-lg shadow-lg space-y-4"
               >
                 <img
-                  src="../static/images/carousel/20180125_001_1_.jpg"
+                  src="./static/images/carousel/20180125_001_1_.jpg"
                   class="w-12 sm:w-32 md:w-40 lg:w-48 rounded-full mt-3 sm:mt-0"
                 />
                 <div class="max-w-2xs sm:max-w-sm md:max-w-lg space-y-4">
@@ -554,7 +554,7 @@
                 class="flex flex-col sm:flex-row items-center sm:space-x-6 bg-white p-4 sm:p-6 rounded-lg shadow-lg space-y-4"
               >
                 <img
-                  src="../static/images/carousel/20180125_001_1_.jpg"
+                  src="./static/images/carousel/20180125_001_1_.jpg"
                   class="w-12 sm:w-32 md:w-40 lg:w-48 rounded-full mt-3 sm:mt-0"
                 />
                 <div class="max-w-2xs sm:max-w-sm md:max-w-lg space-y-4">
@@ -830,7 +830,7 @@
             class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
           >
             <img
-              src="../static/images/news/n1.png"
+              src="./static/images/news/n1.png"
               class="w-14 sm:w-20 md:w-32 h-auto object-cover"
             />
             <div class="text-left m-1 p-1 sm:space-y-2">
@@ -849,27 +849,7 @@
             class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
           >
             <img
-              src="../static/images/news/n1.png"
-              class="w-14 sm:w-20 md:w-32 h-auto object-cover"
-            />
-            <div class="text-left m-1 p-1 sm:space-y-2">
-              <h1 class="text-[#D45D01] text-[8px] sm:text-xs md:text-sm">
-                Branding
-              </h1>
-              <p class="font-bold text-[10px] sm:text-xs md:text-base">
-                What is branding and why do we need it?
-              </p>
-              <p class="text-[8px] sm:text-xs">
-                On the other hand, we denounce with righteous indignation and...
-              </p>
-            </div>
-          </div>
-
-          <div
-            class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
-          >
-            <img
-              src="../static/images/news/n1.png"
+              src="./static/images/news/n1.png"
               class="w-14 sm:w-20 md:w-32 h-auto object-cover"
             />
             <div class="text-left m-1 p-1 sm:space-y-2">
@@ -889,7 +869,7 @@
             class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
           >
             <img
-              src="../static/images/news/n1.png"
+              src="./static/images/news/n1.png"
               class="w-14 sm:w-20 md:w-32 h-auto object-cover"
             />
             <div class="text-left m-1 p-1 sm:space-y-2">
@@ -909,7 +889,7 @@
             class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
           >
             <img
-              src="../static/images/news/n1.png"
+              src="./static/images/news/n1.png"
               class="w-14 sm:w-20 md:w-32 h-auto object-cover"
             />
             <div class="text-left m-1 p-1 sm:space-y-2">
@@ -929,7 +909,27 @@
             class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
           >
             <img
-              src="../static/images/news/n1.png"
+              src="./static/images/news/n1.png"
+              class="w-14 sm:w-20 md:w-32 h-auto object-cover"
+            />
+            <div class="text-left m-1 p-1 sm:space-y-2">
+              <h1 class="text-[#D45D01] text-[8px] sm:text-xs md:text-sm">
+                Branding
+              </h1>
+              <p class="font-bold text-[10px] sm:text-xs md:text-base">
+                What is branding and why do we need it?
+              </p>
+              <p class="text-[8px] sm:text-xs">
+                On the other hand, we denounce with righteous indignation and...
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="flex flex-row space-x-1 border-2 border-[#D45D01] rounded-xl"
+          >
+            <img
+              src="./static/images/news/n1.png"
               class="w-14 sm:w-20 md:w-32 h-auto object-cover"
             />
             <div class="text-left m-1 p-1 sm:space-y-2">
