--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <link
       rel="stylesheet"
-      href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link
       href="./src/output.css"
@@ -524,7 +524,7 @@
       <div class="relative w-full text-black">
         <div class="m-12 md:m-20 p-6 md:p-10">
           <div
-            class="relative h-52 sm:h-64 flex justify-center items-center overflow-scroll rounded-lg"
+            class="relative h-52 sm:h-64 flex justify-center items-center sm:overflow-scroll rounded-lg"
           >
             <div
               class="carousel-item absolute inset-0 flex flex-col sm:flex-row items-center justify-center text-left opacity-100 transition-opacity duration-700"
@@ -1056,8 +1056,8 @@
             <div class="text-xl sm:text-2xl">
               <span>Lu</span><span class="text-[#D45D01]">pix</span>
             </div>
-            <p class="text-xs sm:text-sm w-1/2">
-              Kornix - the leading digital agency based in the UK, working with
+            <p class="text-xs sm:text-sm w-32">
+              Lupix - the leading digital agency based in the UK, working with
               top-tier clients, from start-ups to enterprises.
             </p>
           </div>
@@ -1083,5 +1083,5 @@
       </div>
     </div>
   </body>
-  <script src="./script.js"></script>
+  <script src="./src/script.js"></script>
 </html>
