--- a/index.html
+++ b/index.html
@@ -1350,6 +1350,22 @@
         </button>
       </form>
     </div>
+
+    <!--SuccessPopup-->
+    <div id="successPopup1" class="fixed right-4 top-4 bg-black text-green-400 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300">
+      <p>Successfully booked your slot</p>
+    </div>
+
+    <div id="successPopup2" class="fixed right-4 top-4 bg-black text-green-400 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300">
+      <p>Successfully submitted your doubt</p>
+    </div>
+
+
+    <!--ErrorPopup-->
+    <div id="errorPopup"  class="fixed right-4 top-4 bg-black text-red-500 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300">
+      <p>Failed to book. Please try again later</p>
+    </div>
+
   </body>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./src/script.js"></script>
