--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
         </div>
         <button
           class="mt-6 sm:mt-8 md:mt-10 px-6 py-3 sm:px-8 sm:py-4 bg-[#D45D01] rounded-2xl text-xs sm:text-base md:text-lg text-black hover:text-white cursor-pointer"
+          onclick="pricing()"
         >
           See Pricing
         </button>
@@ -1318,7 +1319,7 @@
           >
           <select
             id="dropdownMenu"
-            class="text-black bg-white w-full p-2 sm:p-3 border border-white rounded-md focus:outline-none focus:border-[#D45D01] cursor-not-allowed opacity-70"
+            class="text-black bg-white w-full p-2 sm:p-3 border border-white rounded-md focus:outline-none focus:border-[#D45D01] cursor-not-allowed opacity-70z cursor-pointer"
             disabled
             required
           >
