--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         </div>
         <button
           class="mt-6 sm:mt-8 md:mt-10 px-6 py-3 sm:px-8 sm:py-4 bg-[#D45D01] rounded-2xl text-xs sm:text-base md:text-lg text-black hover:text-white cursor-pointer"
-          onclick="pricing()"
+          type="button" onclick="pricing()"
         >
           See Pricing
         </button>
@@ -1372,7 +1372,7 @@
   <script src="./src/script.js"></script>
   <script>
     AOS.init({
-      offset: 200,
+      offset: 100,
       duration: 1500,
     });
   </script>
