--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
       <!-- mobile view of nagivation bar-->
       <div
-        class="md:hidden hidden flex-col absolute right-0 top-20 items-center bg-black text-white p-5"
+        class="md:hidden hidden absolute right-0 top-20  bg-black opacity-80 text-white p-5 z-10"
         id="navBar"
       >
-        <div class="space-y-8 scroll-smooth">
+        <div class="m-2 p-2 sm:m-4 sm:p-4 space-y-8 flex flex-col items-center">
           <a
             href="#"
             class="text-xs sm:text-lg md:text-xl hover:text-[#D45D01] hover:cursor-pointer"
