--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <!-- mobile view of nagivation bar-->
       <div
-        class="md:hidden hidden absolute right-0 top-20  bg-black opacity-80 text-white p-5 z-10"
+        class="md:hidden hidden absolute right-0 top-20 bg-black opacity-80 text-white p-5 z-10"
         id="navBar"
       >
         <div class="m-2 p-2 sm:m-4 sm:p-4 space-y-8 flex flex-col items-center">
@@ -120,17 +120,17 @@
 
       <!--Heading section-1 -->
       <div
-        class="text-center text-white m-4 sm:m-6 md:m-8 p-6 sm:p-8 md:p-12"
+        class="text-center m-4 sm:m-6 md:m-8 p-6 sm:p-8 md:p-12"
         data-aos="fade-down"
       >
         <p
-          class="mt-4 sm:mt-6 md:mt-8 m-2 p-2 text-lg sm:text-4xl md:text-7xl max-w-[90%] sm:max-w-3xl mx-auto"
+          class="text-white mt-4 sm:mt-6 md:mt-8 m-2 p-2 text-lg sm:text-4xl md:text-7xl max-w-[90%] sm:max-w-3xl mx-auto"
         >
           Leading The Pack In Digital Solution
         </p>
 
         <p
-          class="mt-4 sm:mt-6 md:mt-8 m-2 p-2 text-sm sm:text-base md:text-xl max-w-[90%] sm:max-w-3xl mx-auto"
+          class="text-gray-500 mt-4 sm:mt-6 md:mt-8 m-2 p-2 text-sm sm:text-base md:text-xl max-w-[90%] sm:max-w-3xl mx-auto"
         >
           At LUPIX, we don’t just create websites; we craft digital experiences
           that convert. With our expertise in web development, social media
@@ -214,7 +214,7 @@
 
       <!--Description-1 -->
       <div
-        class="text-white m-6 sm:m-10 p-3 sm:p-5"
+        class="m-6 sm:m-10 p-3 sm:p-5"
         data-aos="fade-down"
       >
         <p class="text-[#D45D01] font-medium text-sm sm:text-lg md:text-xl">
@@ -222,11 +222,11 @@
         </p>
         <div class="block md:flex md:gap-x-5 mt-4">
           <p
-            class="text-xl sm:text-2xl md:text-4xl font-extrabold mb-4 md:mb-0"
+            class="text-white text-xl sm:text-2xl md:text-4xl font-extrabold mb-4 md:mb-0"
           >
             Get a dedicated design team at fraction of the cost.
           </p>
-          <p class="text-sm sm:text-lg md:text-xl">
+          <p class="text-gray-500 text-sm sm:text-lg md:text-xl">
             Grow Your Business with Tailored Digital Marketing Solutions. Boost
             your online presence with customized strategies crafted by
             experienced professionals. Partner with LUPIX and unlock unlimited
@@ -247,65 +247,74 @@
         data-aos="fade-down"
       >
         <ul
-          class="block md:flex md:justify-center md:gap-5 space-y-10 md:space-y-0"
+          class="block md:flex md:justify-center md:space-x-4 lg:space-x-8 space-y-10 md:space-y-0"
         >
           <li>
-            <img
-              src="./static/images/features/discover.png"
-              class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
-            />
-            <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
+            <i
+              class="fa-solid fa-magnifying-glass p-2 sm:p-4 text-sm sm:text-base md:text-xl text-black bg-[#D45D01] rounded-full"
+            ></i>
+            <h5 class="text-white mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
               Discover
             </h5>
-            <p class="mt-4 md:mt-6 text-xs sm:text-sm md:text-base">
+            <p
+              class="text-gray-500 mt-4 md:mt-6 text-xs sm:text-sm md:text-base"
+            >
               We dive deep into understanding your goals, audience, and
               challenges.
             </p>
           </li>
           <li>
-            <img
-              src="./static/images/features/strategize.png"
-              class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
-            />
-            <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
+            <i
+              class="fa-solid fa-lightbulb p-2 sm:p-4 text-sm sm:text-base md:text-xl text-black bg-[#D45D01] rounded-full"
+            ></i>
+            <h5 class="text-white mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
               Strategize
             </h5>
-            <p class="mt-4 md:mt-6 text-xs sm:text-sm md:text-base">
+            <p
+              class="text-gray-500 mt-4 md:mt-6 text-xs sm:text-sm md:text-base"
+            >
               We craft a custom plan to align your brand with market
               opportunities.
             </p>
           </li>
           <li>
-            <img
-              src="./static/images/features/create.png"
-              class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
-            />
-            <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">Create</h5>
-            <p class="mt-4 md:mt-6 text-xs sm:text-sm md:text-base">
+            <i
+              class="fa-solid fa-display p-2 sm:p-4 text-sm sm:text-base md:text-xl text-black bg-[#D45D01] rounded-full"
+            ></i>
+            <h5 class="text-white mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
+              Create
+            </h5>
+            <p
+              class="text-gray-500 mt-4 md:mt-6 text-xs sm:text-sm md:text-base"
+            >
               Our team designs and develops innovative digital solutions that
               resonate.
             </p>
           </li>
           <li>
-            <img
-              src="./static/images/features/launch.png"
-              class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
-            />
-            <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">Lauch</h5>
-            <p class="mt-4 md:mt-6 text-xs sm:text-sm md:text-base">
+            <i
+              class="fa-solid fa-rocket p-2 sm:p-4 text-sm sm:text-base md:text-xl text-black bg-[#D45D01] rounded-full"
+            ></i>
+            <h5 class="text-white mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
+              Lauch
+            </h5>
+            <p
+              class="text-gray-500 mt-4 md:mt-6 text-xs sm:text-sm md:text-base"
+            >
               We execute with precision, ensuring a seamless and impactful
               rollout.
             </p>
           </li>
           <li>
-            <img
-              src="./static/images/features/optimize.png"
-              class="w-8 sm:w-10 md:w-12 bg-[#D45D01] border-8 border-[#D45D01] rounded-full"
-            />
-            <h5 class="mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
+            <i
+              class="fa-solid fa-gears p-2 sm:p-4 text-sm sm:text-base md:text-xl text-black bg-[#D45D01] rounded-full"
+            ></i>
+            <h5 class="text-white mt-4 md:mt-6 text-sm sm:text-base md:text-lg">
               Optimize
             </h5>
-            <p class="mt-4 md:mt-6 text-xs sm:text-sm md:text-base">
+            <p
+              class="text-gray-500 mt-4 md:mt-6 text-xs sm:text-sm md:text-base"
+            >
               We analyze and refine for continuous improvement and long-term
               success.
             </p>
@@ -332,6 +341,7 @@
 
     <!--Section-3-->
     <div class="m-6 md:m-10 p-6 md:p-10">
+      <!--heading-->
       <div
         class="text-center"
         data-aos="fade-down"
@@ -343,6 +353,8 @@
           We can help you with...
         </p>
       </div>
+
+      <!--capabilites option-->
       <div
         class="text-center"
         data-aos="fade-down"
@@ -432,13 +444,11 @@
         <p class="text-[#D45D01] mt-20 text-base sm:text-lg md:text-xl">
           BENEFITS
         </p>
-        <div
-          class="text-white mt-10 block md:flex space-y-5 md:space-y-0 md:gap-6"
-        >
-          <p class="text-xl sm:text-2xl md:text-4xl">
+        <div class="mt-10 block md:flex space-y-5 md:space-y-0 md:gap-6">
+          <p class="text-white text-xl sm:text-2xl md:text-4xl">
             The design subscription that connects you to your dream team
           </p>
-          <p class="text-base sm:text-lg md:text-xl">
+          <p class="text-gray-500 text-base sm:text-lg md:text-xl">
             A subscription can alleviate the stress of staffing, managing
             expenses, or make design calls like a Creative Director. We partner
             with you to ensure that your design elevates your brand to new
@@ -447,7 +457,8 @@
         </div>
         <button
           class="mt-6 sm:mt-8 md:mt-10 px-6 py-3 sm:px-8 sm:py-4 bg-[#D45D01] rounded-2xl text-xs sm:text-base md:text-lg text-black hover:text-white cursor-pointer"
-          type="button" onclick="pricing()"
+          type="button"
+          onclick="pricing()"
         >
           See Pricing
         </button>
@@ -458,97 +469,109 @@
         class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8 mt-20"
         data-aos="fade-down"
       >
-        <div class="text-white space-y-4">
+        <div class="space-y-4">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fa-solid fa-infinity"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">1. On-demand requests</h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
+            1. On-demand requests
+          </h5>
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             Put all your requests in the design queue in Trello, and we’ll knock
             them out 1 by 1.
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-bolt"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">2. Top-notch quality</h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
+            2. Top-notch quality
+          </h5>
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             High-end work from a dedicated team of senior designers that's
             always available when you need it.
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fab fa-weebly"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">3. Powered by-Webflow</h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
+            3. Powered by-Webflow
+          </h5>
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             We build every site on Webflow, making them dynamic, accessible, and
             easily scalable. It’s easy for you like Squarespace but better.
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-desktop"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
             4. Fast,Responsive,Reliable
           </h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             Get regular updates on your projects and can expect to receive your
             designs within 2-3 days.
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-calendar"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
             5. No Lock in contracts
           </h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             Pay the same every month, no surprises. You can use it for as long
             as you want and cancel anytime.
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-coins"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
             6. Great Value for money
           </h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             Get the power of dedicated design team at fraction of the cost of
             full-time employee. ($54k/yr vs. $112k/yr).
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-cog"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">7. Customized for you</h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
+            7. Customized for you
+          </h5>
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             We design and build custom for you. We’re never starting from a
             template unless you want that? You don't, right?
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-cash-register"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">8. Creative paying</h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
+            8. Creative paying
+          </h5>
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             We’re here when you need us and not on payroll when you don’t.
           </p>
         </div>
-        <div class="text-white space-y-4 mt-10 md:mt-0">
+        <div class="space-y-4 mt-10 md:mt-0">
           <p class="text-[#D45D01] text-base sm:text-lg md:text-xl">
             <i class="fas fa-briefcase"></i>
           </p>
-          <h5 class="text-base sm:text-lg md:text-xl">9. Expert Turnover</h5>
-          <p class="text-xs sm:text-sm md:text-base">
+          <h5 class="text-white text-base sm:text-lg md:text-xl">
+            9. Expert Turnover
+          </h5>
+          <p class="text-gray-500 text-xs sm:text-sm md:text-base">
             You’re getting 10+ years of design experience with every request. No
             hand-holding required.
           </p>
@@ -1353,20 +1376,27 @@
     </div>
 
     <!--SuccessPopup-->
-    <div id="successPopup1" class="fixed right-4 top-4 bg-black text-green-400 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300">
+    <div
+      id="successPopup1"
+      class="fixed right-4 top-4 bg-black text-green-400 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300"
+    >
       <p>Successfully booked your slot</p>
     </div>
 
-    <div id="successPopup2" class="fixed right-4 top-4 bg-black text-green-400 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300">
+    <div
+      id="successPopup2"
+      class="fixed right-4 top-4 bg-black text-green-400 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300"
+    >
       <p>Successfully submitted your doubt</p>
     </div>
 
-
     <!--ErrorPopup-->
-    <div id="errorPopup"  class="fixed right-4 top-4 bg-black text-red-500 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300">
+    <div
+      id="errorPopup"
+      class="fixed right-4 top-4 bg-black text-red-500 opacity-90 flex items-center justify-center z-30 hidden p-4 sm:p-6 rounded-lg shadow-lg transition-all duration-300"
+    >
       <p>Failed to book. Please try again later</p>
     </div>
-
   </body>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./src/script.js"></script>
