--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </button>
 
           <button
-            class="md:hidden text-[#D45D01] p-1 text-xs relative sm:text-lg hover:cursor-pointer hover:text-white"
+            class="md:hidden text-[#D45D01] p-1 text-xs relative sm:text-lg hover:cursor-pointer"
             onclick="navBarClick()"
           >
             <i class="fa fa-bars"></i>
